# clogger

./: .gitignore  .metadata  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/cl/fl/clogger/: CloggerPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html
ios/: clogger.podspec
ios/Classes/: CloggerPlugin.h  CloggerPlugin.m  SwiftCloggerPlugin.swift  native_add.c
ios/Classes/logan/: CMakeLists.txt  console_util.c  console_util.h  main.c  mmap_util.c  mmap_util.h
lib/: clogger.dart  clogger_platform.dart  native_test.dart
lib/cache/: logger_cache.dart
lib/clogan/: allocation.dart  logan.dart
lib/logger/: base_logger.dart  dart_logger.dart  platform_logger.dart  print_and_transfer_logger.dart  transfer_logger.dart
lib/meta/: log_meta.dart  strategy_meta.dart
lib/transfer/: immediately_transfer.dart  pull_transfer.dart  strategy.dart  timing_transfer.dart  transfer.dart
macos/: clogger.podspec
macos/Classes/: CloggerPlugin.swift  native_add.cpp
test/: clogger_test.dart
(+3 files in other folders)
